--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: download_network_images_for_offline
-description: A new Flutter package project.
-version: 0.0.2
+description: A sipmle flutter package that saves network images for whenever the user is offline
+version: 0.0.3
 author:
 homepage:
 
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   
   connectivity: '>=0.4.9+2 <2.0.0'
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
@@ -25,7 +26,8 @@ dev_dependencies:
 flutter:
 
   # To add assets to your package, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   #
