--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Testing
+name: Checks
 on: 
   push: 
      branches: [ master ] 
@@ -7,7 +7,9 @@ on:
 
 jobs: 
   test: 
-    runs-on: macos-latest 
+    runs-on: ubuntu-latest
+    container:
+      image:  google/dart:latest
     steps:
     - uses: actions/checkout@v1
     - name: Install Flutter 
