--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: download_network_images_for_offline
 description: A simple flutter package that saves network images for whenever the user is offline
 version: 0.0.1
-author:
-homepage:
+homepage: https://github.com/Mart100/download_network_images_for_offline
+repository: https://github.com/Mart100/download_network_images_for_offline
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -19,10 +19,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
   # To add assets to your package, add an assets section, like this:
