--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: download_network_images_for_offline
 description: A simple flutter package that saves network images for whenever the user is offline
-version: 0.0.3
+version: 0.0.4
 homepage: https://github.com/Mart100/download_network_images_for_offline
 repository: https://github.com/Mart100/download_network_images_for_offline
 
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   
-  connectivity: '>=0.4.9+2 <2.0.0'
+  connectivity: ^0.4.9+2
   http: ^0.12.2
 
 dev_dependencies:
